// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`TextInput matches DateInput story snapshot 1`] = `
<div>
  <div>
    <label
      class="block text-sm font-medium text-gray-700 mb-1"
      for="text-input-date"
    >
      Date
    </label>
    <input
      class="w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500"
      id="text-input-date"
      type="date"
      value=""
    />
  </div>
</div>
`;

exports[`TextInput matches Default story snapshot 1`] = `
<div>
  <div>
    <label
      class="block text-sm font-medium text-gray-700 mb-1"
      for="text-input-name"
    >
      Name
    </label>
    <input
      class="w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500"
      id="text-input-name"
      type="text"
      value=""
    />
  </div>
</div>
`;

exports[`TextInput matches EmailInput story snapshot 1`] = `
<div>
  <div>
    <label
      class="block text-sm font-medium text-gray-700 mb-1"
      for="text-input-email-address"
    >
      Email Address
    </label>
    <input
      class="w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500"
      id="text-input-email-address"
      placeholder="name@example.com"
      type="email"
      value=""
    />
  </div>
</div>
`;

exports[`TextInput matches LongLabel story snapshot 1`] = `
<div>
  <div
    style="width: 300px;"
  >
    <div>
      <label
        class="block text-sm font-medium text-gray-700 mb-1"
        for="text-input-enter-a-very-long-label-that-might-wrap-to-multiple-lines"
      >
        Enter a very long label that might wrap to multiple lines
      </label>
      <input
        class="w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500"
        id="text-input-enter-a-very-long-label-that-might-wrap-to-multiple-lines"
        placeholder="Type here..."
        type="text"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`TextInput matches NumberInput story snapshot 1`] = `
<div>
  <div>
    <label
      class="block text-sm font-medium text-gray-700 mb-1"
      for="text-input-population"
    >
      Population
    </label>
    <input
      class="w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500"
      id="text-input-population"
      placeholder="Enter population"
      type="number"
      value="1000000"
    />
  </div>
</div>
`;

exports[`TextInput matches PasswordInput story snapshot 1`] = `
<div>
  <div>
    <label
      class="block text-sm font-medium text-gray-700 mb-1"
      for="text-input-password"
    >
      Password
    </label>
    <input
      class="w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500"
      id="text-input-password"
      placeholder="Enter password"
      type="password"
      value=""
    />
  </div>
</div>
`;

exports[`TextInput matches SearchInput story snapshot 1`] = `
<div>
  <div>
    <label
      class="block text-sm font-medium text-gray-700 mb-1"
      for="text-input-search-countries"
    >
      Search Countries
    </label>
    <input
      class="w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500"
      id="text-input-search-countries"
      placeholder="Search..."
      type="search"
      value=""
    />
  </div>
</div>
`;

exports[`TextInput matches WithCustomClassName story snapshot 1`] = `
<div>
  <div
    class="max-w-md"
  >
    <label
      class="block text-sm font-medium text-gray-700 mb-1"
      for="text-input-custom-styled-input"
    >
      Custom Styled Input
    </label>
    <input
      class="w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500"
      id="text-input-custom-styled-input"
      type="text"
      value=""
    />
  </div>
</div>
`;

exports[`TextInput matches WithPlaceholder story snapshot 1`] = `
<div>
  <div>
    <label
      class="block text-sm font-medium text-gray-700 mb-1"
      for="text-input-search"
    >
      Search
    </label>
    <input
      class="w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500"
      id="text-input-search"
      placeholder="Enter search term..."
      type="text"
      value=""
    />
  </div>
</div>
`;

exports[`TextInput matches WithValue story snapshot 1`] = `
<div>
  <div>
    <label
      class="block text-sm font-medium text-gray-700 mb-1"
      for="text-input-email"
    >
      Email
    </label>
    <input
      class="w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500"
      id="text-input-email"
      type="email"
      value="user@example.com"
    />
  </div>
</div>
`;
